@@ -1,6 +1,7 @@
 == Change Log
 
 === Edge
+* Make specs and bootstrap work in instance mode. [Sean Cribbs]
 * Override spec:integration task and rescope some spec task options to 
 RADIANT_ROOT. [Sean Cribbs]
 * Improve rspec-1.1.12 compatibility. [Sean Cribbs]
